--- a/run-buddy practice.html
+++ b/run-buddy practice.html
@@ -37,7 +37,7 @@
 
     <!-- footer -->
     <sfooter>
-        <h2>Meet the trainers</h2>
+        <h2>❤️ Made with love by Run Buddy.</h2>
     </footer>
     
   </body>
