--- a/run-buddy practice.html
+++ b/run-buddy practice.html
@@ -7,7 +7,28 @@
   <body>
     <!-- navigation -->  
     <header>
-        <h1>RUN BUDDY</h1>
+        <h1>
+        <a href="/">RUN BUDDY</a>
+        </h1>
+        <nav>
+            <!-- Unordered list element -->
+            <ul>
+              <!-- List item element -->
+              <li>
+                <!-- Anchor element -->
+                <a href="#What-we-do">What we do</a>  
+              </li>
+              <li>
+                <a href="#What we do">What we do</a> 
+              </li>
+              <li>
+                <a href="#Your-Trainers">Your Trainers</a>
+              </li>
+              <li>
+                <a href="#Reach-out">Reach out</a>  
+              </li>
+            </ul>
+        </nav>
     </header>  
     
     <!-- hero/jumbotron -->
