--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a href="#What-we-do">What we do</a>
               </li>
               <li>
-                <a href="#What we do">What we do</a> 
+                <a href="#What you do">What you do</a> 
               </li>
               <li>
                 <a href="#Your-Trainers">Your Trainers</a>
