--- a/index.html
+++ b/index.html
@@ -58,10 +58,15 @@
         <h2>Reach out</h2>
     </section>
 
+  </body>  
+
     <!-- footer -->
     <sfooter>
         <h2>❤️ Made with love by Run Buddy.</h2>
+        <div>
+          <a href="#">Read Our Privacy Policy</a><br/>
+          &copy; 2019 Run Buddy, Inc.
+        </div>
     </footer>
     
-  </body>
 </html> 
