--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   </body>  
 
     <!-- footer -->
-    <sfooter>
+    <footer>
         <h2>❤️ Made with love by Run Buddy.</h2>
         <div>
           <a href="#">Read Our Privacy Policy</a><br/>
