--- a/index.html
+++ b/index.html
@@ -42,12 +42,10 @@
        <form>
          <label for="name">Enter full name:</label>
          <input type="text" placeholder="Your name" name="name" id="name" />
-        
          <label for="email">Enter email address:</label>
-         <input type="text" placeholder="Email address" email="email" id="email" />
-      
+         <input type="email" placeholder="Email address" email="email" id="email" />
          <label for="phone">Enter a telephone number:</label>
-         <input type="text" placeholder="Phone Number" phone="phone" id="email" />
+         <input type="tel" placeholder="Phone Number" phone="phone" id="email" />
          <p>
            Have you worked with a trainer before?
            <input type="radio" name="trainer-confirm" id="trainer-yes" />
