--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
     </header>     
     
     <!-- hero/jumbotron -->
-    <section>
-      <div>
+    <section class="hero">
+      <div class="hero-form">
         <h3>Get Started Today</h3>
-        <p>Fill out this form and one of our trainers will schedule a consult</p>
-        <!-- Add form element -->
-       <form>
+         <p>Fill out this form and one of our trainers will schedule a consult</p>
+         <!-- Add form element -->
+         <form>
          <label for="name">Enter full name:</label>
-         <input type="text" placeholder="Your name" name="name" id="name" />
+         <input type="text" placeholder="Your name here" name="name" id="name" />
          <label for="email">Enter email address:</label>
          <input type="email" placeholder="Email address" email="email" id="email" />
          <label for="phone">Enter a telephone number:</label>
