worked on button

--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
          <!-- Add form element -->
          <form>
          <label for="name">Enter full name:</label>
-         <input type="text" placeholder="Your name here" name="name" id="name" />
+         <input type="text" placeholder="Your name here" name="name" id="name" class="form-input" />
          <label for="email">Enter email address:</label>
-         <input type="email" placeholder="Email address" email="email" id="email" />
+         <input type="email" placeholder="Email address" email="email" id="email" class="form-input" />
          <label for="phone">Enter a telephone number:</label>
-         <input type="tel" placeholder="Phone Number" phone="phone" id="email" />
+         <input type="tel" placeholder="Phone Number" phone="phone" id="email" class="form-input" />
          <p>
            Have you worked with a trainer before?
            <input type="radio" name="trainer-confirm" id="trainer-yes" />
@@ -59,7 +59,8 @@
             <label for="age 18"></label>
          </p>
          <p>
-           <button type="submit">Get running!</button>
+           <button type="submit"><h4>Get running</h4>
+           </button>
          </p>
         </form>
       </div>
