style what you do section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               </li>
             </ul>
         </nav>
-    </header>     
+    </header>
     
     <!-- hero/jumbotron -->
     <section class="hero">
@@ -76,7 +76,7 @@
     </section>
 
     <!-- "what you do" section -->
-    <section id="What-you-do">
+    <section id="What-you-do" class="steps">
         <h2>What you Do</h2>
 
         <div>
