--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
           seitan heirloom post-ironic pop-up iPhone mlkshk hella selfies fashion axe occupy readymade put a bird on it messenger bag Wes Anderson Schlitz plaid Bushwick church-key lo-fi skateboard slow-carb hashtag trust fund Williamsburg biodiesel fixie farm-to-table 8-bit banjo XOXO Banksy chillwave bicycle rights retro cliche tattooed bespoke irony mumblecore Shoreditch deep v polaroid McSweeney's bitters cray gentrify tofu Marfa you probably haven't heard of them yr banh mi asymmetrical art party selvage letterpress High Life.
         </p>
       </div>
+
       <div class="hero-form">
         <h3>Get Started Today</h3>
          <p>Fill out this form and one of our trainers will schedule a consult</p>
@@ -88,9 +89,12 @@
 
     <!-- "what you do" section -->
     <section id="What-you-do" class="steps">
-        <h2 class="section-title secondary-border">What you Do</h2>
-
-        <div class="step">
+      <div class="flex-row">
+        <h2 class="section-title secondary-border">
+          What you Do
+        </h2>
+      </div>  
+      <div class="step">
           <h3>Step 1.</h3>
           <div class="step-info">
             <div class="step-img">
@@ -128,7 +132,7 @@
             </div>
           </div>
         </div>
-
+             
         <div class="step">
           <h3>Step 4.</h3>
           <div class="step-info">
@@ -141,12 +145,17 @@
             </div>
           </div>
         </div>
-    </section>
+    </section> 
+    <!-- "what you do" ends here -->
 
-    <!-- "meet the trainers" section -->
-    <section id="Your-Trainers" class="trainers">
-        <h2 class="section-title primary-border">Meet the trainers</h2>
-
+    <!-- "meet the trainers" starts here --> 
+    <section id="Your-Trainers">
+      <div class="flex-row">
+        <h2 class="section-title primary-border">
+          Meet the trainers
+        </h2>
+      </div>
+      
         <article class="trainer">
           <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
           <div class="trainer-bio text-left">
