--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <h3>Get Started Today</h3>
          <p>Fill out this form and one of our trainers will schedule a consult</p>
          <!-- Add form element -->
-         <form>
+        <form>
          <label for="name">Enter full name:</label>
          <input type="text" placeholder="Your name here" name="name" id="name" class="form-input" />
          <label for="email">Enter email address:</label>
@@ -156,11 +156,12 @@
         </h2>
       </div>
       
+      <div class="trainers">
         <article class="trainer">
           <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
-          <div class="trainer-bio text-left">
-            <h3>Arron Stephens</h3>
-            <h4>Speed / Strength</h4>
+          <div class="trainer-bio">
+            <h3 class="trainer-name">Arron Stephens</h3>
+            <h4 class="trainer-role">Speed / Strength</h4>
             <p>
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
               itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
@@ -169,34 +170,34 @@
         </article>
 
         <article class="trainer">
-          <div class="trainer-bio text-right">
-            <h3>Joanna Gill</h3>
-            <h4>Endurance</h4>
+          <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after exercise" />
+          <div class="trainer-bio">
+            <h3 class="trainer-name">Joanna Gill</h3>
+            <h4 class="trainer-role">Endurance</h4>
             <p>
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
               itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
             </p>
           </div>
-          <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after exercise" />
         </article>
 
         <article class="trainer">
           <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing headband" />
-          <div class="trainer-bio text-left">
-            <h3>Harry "the headband" Smith</h3>
-            <h4>Strength</h4>
+          <div class="trainer-bio">
+            <h3 class="trainer-name">Harry "the headband" Smith</h3>
+            <h4 class="trainer-role">Strength</h4>
             <p>
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
               itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
             </p>
           </div>
         </article>
-
+      </div>
     </section>
 
     <!-- "Reach out" section -->
     <section id="Reach-out" class="contact">
-      <h2 class="section-title secondary-border">Reach out</h2>
+      <h2 class="section-title Reach-out">Reach out</h2>
         <div class="contact-form">
           <h3>contact us</h3>
           <form>
